[package]
name = "timetracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Time tracking
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = { version = "0.29", features = ["all-widgets"]}
crossterm = "0.28"

# Optional: For better error handling
color-eyre = "0.6"
