[package]
name = "timetracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "=0.3.36"

ratatui = { version = "=0.27.0", features = ["all-widgets"]}
crossterm = "=0.27.0"

color-eyre = "=0.6.2"

aes = "0.8"
ctr = "0.9"
hex = "0.4"

unicode-segmentation = "=1.11.0"
unicode-width = "=0.1.14"
