[package]
name = "timetracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Time tracking
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "=0.3.36"

# TUI
ratatui = { version = "=0.27.0", features = ["all-widgets"] }
crossterm = "=0.27.0"

# Error handling
color-eyre = "=0.6.2"

# ── Cryptography (production-grade) ──────────────────────────────────────────
# Long-term identity: Ed25519 signing keypair
ed25519-dalek = { version = "=2.0.0", features = ["rand_core"] }

# Ephemeral session keys: X25519 ECDH
x25519-dalek = { version = "=2.0.1", features = ["static_secrets"] }

# Key derivation: HKDF-SHA256
hkdf = "=0.12.4"
sha2 = "=0.10.8"

# Message encryption: ChaCha20-Poly1305 AEAD
chacha20poly1305 = "=0.10.1"

# Randomness (OS-backed)
rand = "=0.8.5"

# Wire encoding
base64 = "=0.22.1"

# Pin transitive deps for rustc 1.75 compatibility
unicode-segmentation = "=1.11.0"
unicode-width = "=0.1.14"
base64ct = "=1.6.0"
